# forge-admin

./: CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.template/: template-config.yaml
apps/forge-ai-python/: Dockerfile  README.md  pyproject.toml
apps/forge-ai-python/src/: __init__.py  main.py
apps/forge-ai-python/src/adapters/: __init__.py  base.py  deepseek.py  ernie.py  factory.py  glm.py  qwen.py
apps/forge-ai-python/src/api/: __init__.py  chat.py  document.py  health.py  router.py
apps/forge-ai-python/src/config/: __init__.py  model_config.py  settings.py
apps/forge-ai-python/src/models/: __init__.py  schemas.py
apps/forge-ai-python/src/services/: __init__.py  document_parser.py  llm_client.py  summarizer.py
apps/forge-ai-python/src/utils/: __init__.py  http_client.py
apps/forge-ai-python/tests/: test_health.py
apps/forge-miniapp/: package-lock.json  package.json  project.config.json  project.private.config.json
apps/forge-miniapp/src/: pages.json
apps/forge-miniapp/src/api/: attachment.ts  auth.ts  request.ts  user.ts
apps/forge-miniapp/src/composables/: useSmsCode.ts
apps/forge-miniapp/src/stores/: user.ts
apps/forge-server/: Dockerfile  pom.xml
apps/forge-server/docs/: DEPLOYMENT-CHECKLIST.md
apps/forge-server/forge-dependencies/: pom.xml
apps/forge-server/forge-framework/forge-spring-boot-starter-security/: pom.xml
apps/forge-server/forge-module-ai/forge-module-ai-biz/: pom.xml
apps/forge-web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/forge-web/src/: components.d.ts  main.ts
apps/forge-web/src/api/: auth.ts  system.ts
docs/: database-design-specification.md  module-development.md  template-guide.md  新模块开发规范.md
docs/superpowers/plans/: 2026-06-11-admin-app-api-split.md  2026-06-16-app-account-enhancement.md  2026-06-17-ai-frontend-pages.md  2026-06-17-ai-java-service.md  2026-06-17-ai-module-basics.md  2026-06-17-ai-python-service.md
docs/superpowers/specs/: 2026-06-15-app-account-enhancement-design.md  2026-06-17-ai-module-design.md  2026-06-19-二级等保改造-design.md  2026-07-04-multi-ui-themes-design.md
scripts/: create-module.js  init-project.js  server.sh
sql/: init-app.sql  init-workflow.sql  init.sql  migrate-ai-document.sql
(+286 files in other folders)
